[package]
name = "themes"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
