cabal-version: 3.6
name: haskell-json-stdout-elasticsearch
version: 0.1.0
-- synopsis:
-- description:
category:
homepage: https://github.com/Siprj/tracer-bullerts
bug-reports: https://github.com/Siprj/tracer-bullerts/issues
author: Jan Šipr
maintainer: sipr.jan@gmail.com
copyright: Copyright: (c) 2022 Jan Šipr
license: MIT
license-file: LICENSE
build-type: Simple
tested-with: GHC==9.2.2
extra-doc-files: 

source-repository head
  type: git
  location: https://github.com/Siprj/tracer-bullerts

flag pedantic
  description: Pass additional warning flags and -Werror to GHC.
  manual: True
  default: True

common common-stanza
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

common common-ghc-options
  if flag(pedantic)
    ghc-options: -Werror

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts "-with-rtsopts=-N --disable-delayed-os-memory-return"

common common-ghc-executable-options
  ghc-options:
    -threaded
    -rtsopts -with-rtsopts=-N

executable haskell-json-stdout-elasticsearch
  import: common-stanza
  import: common-ghc-options
  import: common-ghc-executable-options

  hs-source-dirs: src
  main-is: Main.hs

  build-depends: 
      base
    , aeson
    , bytestring
    , effectful
    , log-effectful
    , log-base
    , time-effectful
    , text
    , unix
    , time
