[package]
name = "rust-http-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-otel-metrics = "0.9.1"
log = "0.4.22"
opentelemetry = "0.27.1"
opentelemetry-appender-log = "0.27.0"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-stdout = "0.27.0"
opentelemetry_sdk = "0.27.1"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["serde_derive", "std"] }
tokio = { version = "1.43.1", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
