cabal-version:      3.0
name:               haskell-example
version:            0.1.0.0
license:            MIT
author:             Jan Sipr
maintainer:         sipr.jan@gmail.com
category:           Development
build-type:         Simple


common warnings
    ghc-options: -Wall -threaded

executable haskell-example
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1
      , http-client
      , text
      , hs-opentelemetry-sdk == 0.0.3.6
      , hs-opentelemetry-api == 0.1.0.0
      , hs-opentelemetry-propagator-w3c == 0.0.1.3
      , hs-opentelemetry-instrumentation-http-client == 0.1.0.0
      , aeson
      , unliftio
      , hs-opentelemetry-exporter-otlp
      , http-types

    hs-source-dirs:   app
    default-language: GHC2021
