[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.22"
opentelemetry = "0.27.0"
opentelemetry-appender-log = "0.27.0"
opentelemetry-http = "0.27.0"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"
